# SandboxEngine

./: CMakeLists.txt  main.cpp
include/: MainMenuState.h  State.h  StateMachine.h
src/: MainMenuState.cpp  StateMachine.cpp
